Display a div for each expectation on dashboard
Nothing in it yet, mind.

--- a/lib/fakettp/views/index.erb
+++ b/lib/fakettp/views/index.erb
@@ -1,3 +1,11 @@
 <html>
-  <title>FakeTTP</title>
+  <head>
+    <title>FakeTTP</title>
+  </head>
+  <body>
+    <% @expectations.each do |expectation| %>
+      <div class="expectation">
+      </div>
+    <% end %>
+  </body>
 </html>
