Display expectation contents in dashboard

--- a/lib/fakettp/views/index.erb
+++ b/lib/fakettp/views/index.erb
@@ -4,8 +4,7 @@
   </head>
   <body>
     <% @expectations.each do |expectation| %>
-      <div class="expectation">
-      </div>
+      <div class="expectation"><%= expectation.render %></div>
     <% end %>
   </body>
 </html>
