--- a/lib/fakettp/public/fakettp.css
+++ b/lib/fakettp/public/fakettp.css
@@ -3,12 +3,37 @@ body {
     "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans",
     "Liberation Sans", Verdana, sans-serif;
 }
+div.request {
+  margin-bottom: 10px;
+}
 div.expectation {
   width: 95%;
   border: 1px solid #888;
+  border-top: none;
   background-color: #eee;
-  margin: 0 auto 10px auto;
+  margin: 0 auto 0 auto;
   padding: 5px;
+}
+div.error {
+  width: 95%;
+  border: 1px solid #f00;
+  border-top: none;
+  background-color: #fdd;
+  margin: 0 auto 0 auto;
+  padding: 5px;
+  color: #f00;
+}
+.pass h1 {
+  background-color: #0a0;
+}
+.fail h1 {
+  background-color: #f00;
+}
+.pass h1, .pass div {
+  border-color: #0a0;
+}
+.fail h1, .fail div {
+  border-color: #f00;
 }
 h1 {
   width: 95%;
@@ -19,15 +44,22 @@ h1 {
   font-size: 110%;
   color: #fff;
 }
-.expectation pre {
+.expectation pre, .error pre {
   padding: 0;
   margin: 0;
   font: 75% Monaco, "Bitstream Vera Sans Mono", "Lucida Console",
-    Terminal, monospace;        
+    Terminal, monospace;
 }
-.pass {
+div.pass {
+  border-color: #0a0;
+}
+div.fail {
+  border-color: #f00;
+}
+span.pass {
   color: #0a0;
 }
-.fail {
+span.fail {
   color: #f00;
 }
+
